// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`upload routes DELETE/customisation/upload should have a validation schema 1`] = `
Object {
  "children": Object {
    "_id": Object {
      "flags": Object {
        "presence": "required",
      },
      "invalids": Array [
        "",
      ],
      "type": "string",
    },
  },
  "flags": Object {
    "presence": "required",
  },
  "type": "object",
}
`;

exports[`upload routes GET/customisation/upload should return all uploads 1`] = `
Array [
  "upload1",
  "upload2",
]
`;

exports[`upload routes POST /api/import/thesauris should validate request 1`] = `
Object {
  "children": Object {
    "thesauri": Object {
      "flags": Object {
        "presence": "required",
      },
      "invalids": Array [
        "",
      ],
      "type": "string",
    },
  },
  "flags": Object {
    "presence": "required",
  },
  "type": "object",
}
`;

exports[`upload routes POST/customisation/upload should save the upload and return it 1`] = `
Object {
  "__v": 0,
  "filename": "f2082bf51b6ef839690485d7153e847a.pdf",
  "mimetype": "application/octet-stream",
  "originalname": "gadgets-01.pdf",
  "size": 171411271,
}
`;
